# alazar

./: Cargo.toml  Changelog.md  README.md  check.sh
.cargo/: config.toml
.github/workflows/: check.yml
src/: lib.rs
src/misc/: mod.rs  mult13p1.rs  xabc.rs
src/xorshift/: generic.rs  mod.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs
src/xorshift/xyza8/: mod.rs
