[package]
name = "alazar"
description = "randomness"
version = "0.0.1"
edition = "2021"
rust-version = "1.72.0" ## sync with readme, ./check.sh & .github/workflows/check.yml
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/alazar"
documentation = "https://docs.rs/alazar"
license = "MIT OR Apache-2.0"
include = [
	"/src/**/*.rs",
	"/src/**/*.md",
	"/Cargo.toml",
	"/LICENSE-*",
	"/README.md",
]
categories = ["algorithms", "embedded", "no-std::no-alloc"]
keywords = ["rand", "random", "rng", "prng"]
publish = true

# ------------------------------------------------------------------------------

[features]
default = ["std"]

#* environment features *#
# (not enabling "std" declares the library as "no_std")
std = [ # enables functionality that depend on the standard library
	"alloc",
	"rand_core?/std",
]
alloc = [ # enables functionality that depend on allocation
	"rand_core?/alloc",
]
no_std = [] # enables functionality incompatible with the standard library (unused)

#* safety features *#
safe = [] # forbids unsafe at the crate level
safest = ["safe", "devela/safest"] # forbids unsafe recursively
unsafe = [] # enables unsafe at the crate level (unused)
unsafest = ["unsafe", "devela/unsafest"] # enables unsafe recursively

#* nightly features *#
nightly = [] # enables the nightly features
nightly_docs = ["nightly", "std", "rand_core"] # features for docs.rs

#* other features *#
all = ["rand_core"]

# ------------------------------------------------------------------------------

[dependencies]
devela = "0.9.0"

#* optional dependencies *#
rand_core = { version = "0.6.4", optional = true, default-features = false }

[dev-dependencies]

# ------------------------------------------------------------------------------

[package.metadata.docs.rs]
no-default-features = true
features = ["nightly_docs"]

[badges]
maintenance = { status = "experimental" }
