[package]
name = "alazar"
description = "randomness"
version = "0.0.2"
edition = "2021"
rust-version = "1.72.0" ## sync with readme, ./check.sh & .github/workflows/check.yml
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/alazar"
documentation = "https://docs.rs/alazar"
license = "MIT OR Apache-2.0"
include = [
	"/src/**/*.rs",
	"/src/**/*.md",
	"/Cargo.toml",
	"/LICENSE-*",
	"/README.md",
]
categories = ["algorithms", "embedded", "no-std::no-alloc"]
keywords = ["rand", "random", "rng", "prng"]
publish = true

# ------------------------------------------------------------------------------

[features]

#* capability features *#
default = []
full = [ # enables optional capabilities in this crate
	"rand_core"
]

#* environment features *#
std = [ # disables `no_std` mode and enables `std` functionality
	"alloc",
	"rand_core?/std",
]
alloc = [ # enables `alloc` functionality
	"rand_core?/alloc"
]
no_std = [] # enables functionality incompatible with `std` (unused)

#* safety features *#
unsafest = ["unsafe", "devela/unsafest"] # enables unsafe recursively
unsafe = [] # enables unsafe features in this crate (unused)
safe = [] # forbids unsafe in this crate
safest = ["safe", "devela/safest"] # forbids unsafe recursively

#* nightly features *#
nightly = [] # enables nightly features
nightly_docs = ["nightly", "std", "rand_core"] # enables features for docs.rs

#* deprecated features *#
all = ["full"] # since 0.0.2

# ------------------------------------------------------------------------------

[dependencies]
devela = "0.9.0"

#* optional dependencies *#
rand_core = { version = "0.6.4", optional = true, default-features = false }

[dev-dependencies]

# ------------------------------------------------------------------------------

[package.metadata.docs.rs]
no-default-features = true
features = ["nightly_docs"]

[badges]
maintenance = { status = "experimental" }
